syntax = "proto3";

package auth;

service AuthService {
  rpc Login(LoginDto) returns (AuthToken) {}
}

message AuthToken {
  string token = 1;
}

message LoginDto {
  string username = 1;
  string password = 2;
}